--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="./favicon.ico" />
     <link href="./src/index.css" rel="stylesheet" type="text/css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>オーシャン発注</title>
+    <title>オーシャン店舗在庫管理</title>
   </head>
   <body>
     <div id="root"></div>
